Fix for #890: add jars for shell/console and fix bootstrap classpath

--- a/base/org.codehaus.groovy24/about.html
+++ b/base/org.codehaus.groovy24/about.html
@@ -44,5 +44,14 @@ and such source code may be obtained at <a href="https://www.eclipse.org">https:
 <li>License text: <a href="about_files/asl2-license.txt">asl2-license.txt</a></li>
 </ul>
 
+<h4>jline-2.12.jar</h4>
+
+<ul>
+<li>Obtained from: <a href="https://dl.bintray.com/groovy/maven/apache-groovy-sdk-2.4.17.zip">https://dl.bintray.com/groovy/maven/apache-groovy-sdk-2.4.17.zip</a></li>
+<li>License kind: ASL</li>
+<li>License URL: <a href="https://www.opensource.org/licenses/bsd-license.php">https://www.opensource.org/licenses/bsd-license.php</a></li>
+<li>License text: <a href="about_files/jline2-license.txt">jline2-license.txt</a></li>
+</ul>
+
 </body>
 </html>
